# test_cxx_modules

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: a.cpp  a.cppm  b.cppm  channel.cpp  channel.cppm  child.cppm  child_impl.cpp  event.cpp  event.cppm  lib.cppm  parent.cppm  scene.cpp  scene.cppm  test_module.cppm  util_timeline_scene.cppm
